--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html ng-app="arkServerManagerApp">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Ark Server Manager</title>
+    <title>ZionHost Ark Server Manager</title>
     <link rel="stylesheet" href="libs/css/bootstrap.min.css">
     <link rel="stylesheet" href="libs/css/bootstrap_slate.min.css">
     <link rel="stylesheet" href="css/ark.css">
@@ -10,9 +10,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.js" integrity="sha384-TJOOLpERTOvNrXRCjF2oyLOS27od4WY6oWZt8XjDmfWy4nNecfU9cvC2yli1DQUn" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-resource.js" integrity="sha384-c55syhTCSQrHACyLRdc+4vQZvGrn/A84IhPkRYPzAWVGow6c2X0ZXapzC9zBjko2" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js" integrity="sha384-k+Qp/8rZxoiiYGVjOBiZwkEp5yv6clgl2EmwNaE1oUMlfmEYgCWazxf4CyxfZiWG" crossorigin="anonymous"></script>
-    <script src="../libs/js/bootstrap.min.js"></script>
+    <script src="libs/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.2/ui-bootstrap-tpls.min.js" integrity="sha384-GkFbgoIeqNVmM/p0DA+XotSxhjwDWI9Fw5bO6Gbp9/tK56xdmYhxj/Sg5XAUTV7V" crossorigin="anonymous"></script>
-    <script src="../scripts/ark.js"></script>
+    <script src="scripts/ark.js"></script>
 </head>
 <body>
     <div ng-view></div>
